# comp-prog

./: .gitignore  README.md
aoc/: g.dot  (+1 more)
aoc/2021/: 1-a.cpp  1-b.cpp  10-a.cpp  10-b.cpp  11-a.cpp  11-b.cpp  12-a.cpp  12-b.cpp  13-a.cpp  13-b.cpp  13t.cpp  13tt.cpp  14-a.cpp  14-b.cpp  15-a.cpp  15-b.cpp  16-a.cpp  16-b.cpp  17-a.cpp  17-b.cpp  18-a.cpp  18-b.cpp  18.cpp  19-a.cpp  2-a.cpp  2-b.cpp  20-a.cpp  21-a.cpp  21-b.cpp  23-a.cpp  23-b.cpp  24-a.cpp  24-a.naive.cpp  24-ab.cpp  25-a.cpp  3-a.cpp  3-b.cpp  4-a.cpp  4-b.cpp  5-a.cpp  (+12 more)
aoc/2021/24.input/: xd  xi  xj  xk  xl  xm
cf/: .gitignore  CMakeLists.txt  anton-and-letters.cpp  archer.cpp  cashier.cpp  coder.cpp  collecting-beats.cpp  color-fence.cpp  fox-cross.cpp  little-girl-max-sum.cpp  next-round.cpp  theatre-square.cpp  way-too-long-words.cpp  young-physicist.cpp
cf/round-524/: a.cpp
cf/rounds/cfr-745/: a.cpp  b.cpp  ha.cpp
cf/rounds/cfr-750/: a.cpp  b.cpp  c.cpp
cf/rounds/cfr-757/: a.cpp  b.cpp  d1.cpp  test.cpp
cf/rounds/edu-127/: a.cpp  b.cpp  c.cpp
cf/rounds/edu-round-87/: a.cpp  b.cpp  c.cpp  d.cpp
cf/rounds/hello-2019/: a.cpp  b.cpp  c.cpp
cf/rounds/hello-2020/: a.cpp  b.cpp  test.cpp
cf/rounds/round-524/: b.cpp
cf/rounds/round-528/: a.cpp  b.cpp
cf/rounds/round-536/: a.cpp  b.cpp  c.cpp  t.cpp
cf/rounds/round-563/: a.cpp  b.cpp  c.cpp
cf/rounds/round-564/: b.cpp  nauuo-and-chess.cpp  nauuo-and-votes.cpp
cf/rounds/round-571/: a.cpp  b.cpp  c.cpp
cf/rounds/round-583/: a.cpp  ae.cpp  b.cpp  c.cpp  d.cpp
cf/rounds/round-584/: a.cpp  b.cpp  c.cpp  e1.cpp
cf/rounds/round-592/: a.cpp  b.cpp
cf/rounds/round-594/: a.cpp  b.cpp  print_boards.cpp
cf/rounds/round-625/: a.cpp  b.cpp  c.cpp  t.cpp
cf/rounds/round-641/: a.cpp  b.cpp  c.cpp  t.cpp
cf/rounds/round-643/: a.cpp  b.cpp  c.cpp
cf/rounds/round-644/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
cf/rounds/round-653/: a.cpp  b.cpp  c.cpp
cf/rounds/round-654/: a.cpp  b.cpp  c.cpp
cf/solved-offline/: 489c.cpp  anton-and-letters.cpp  collecting-beats.cpp  cows-and-sequence.cpp  lcm-challenge.cpp  magic-numbers.cpp  max-product.cpp  maximums.cpp  perfect-number.cpp  round-table-knights.cpp  sereja-suffixes.cpp  watermelon.cpp  young-physicist.cpp
hackerank/: .gitignore  CMakeLists.txt  README.md  generator.cpp
hackerank/src/: absolute-permutations.cpp  accessing-inherited-functions.cpp  algorithmic-crush.cpp  cutting-boards.cpp  game-of-rotation.cpp  ice-cream-parlor.cpp  matrix-layer-rotation.cpp  most-distant.cpp  richie-rich.cpp  sumar-and-floating-rocks.cpp  super-reduced-string.cpp
uva/: .gitignore  100.3n+1.cpp  10044.ErdosNumber.cpp  10082.WERTYU.cpp  10141.RequestForProposal.cpp  10205.StackEmUp.cpp  10258.ContestScoreboard.cpp  10281.AverageSpeed.cpp  10363.TicTacToe.cpp  10420.ListOfConquers.cpp  10420.ListOfConquers.in  10683.TheDecadaryWatch.cpp  10703.FreeSpots.cpp  10812.BeatTheSpread.cpp  10812.BeatTheSpread.in  10911.FormingQuizTeams.cpp  10921.FindTheTelephone.cpp  10921.FindTheTelephone.in  11044.SearchingForNessy.cpp  11044.SearchingForNessy.in  11150.Cola.cpp  11223.DahDahDah.cpp  11223.DahDahDah.in  355.TheBasesAreLoaded.cpp  3n+1.in  4010.GeophysicsProspection.cpp  483.world_scramble.cpp  573.TheSnail.cpp  661.BlowingFuses.cpp  739.soundex_indexing.cpp  843.CryptKicker.cpp  941.Permutations.cpp  AverageSpeed.in  BlowingFuses.in  CMakeLists.txt  ContestScoreboard.in  ContestScoreboard.md  CryptKicker.md  CryptKicker2.in  CryptKicker3.in  (+12 more)
uva/nbproject/: configurations.xml  project.xml
(+452 files in other folders)
